fix(#4): fixed clipping of frontend box' phone content

--- a/src/app/_partial/frontendBox/frontendBox.module.css
+++ b/src/app/_partial/frontendBox/frontendBox.module.css
@@ -192,7 +192,10 @@
 
 .content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(var(--item-width), 1fr));
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(min(var(--item-width), 100%), 1fr)
+  );
   gap: var(--spacing-0);
   width: 80%;
   margin: 0 auto;
